--- a/form1.html
+++ b/form1.html
@@ -8,7 +8,7 @@
         function add(){
             let r1 = n1 + n2;
             alert(r1);
-            document.getElementById("result").textContent = r1;
+            document.getElementById("result").textContent = `r1`;
         }
 
         function subtract(){
