--- a/form2.html
+++ b/form2.html
@@ -6,6 +6,7 @@
 <input id="numb2">
 
 <button type="button" onclick="add()">Submit</button>
+<button type="button" onmousehover="add()">Submit2</button>
 
 <p id="demo1"></p>
 
